Add more projects
Added more projects and tylized the content a bit more. Added images as well.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a class="home-button" href="./index.html">
                 <img src="./img/home.png" alt="Transparent/white home logo">
             </a>
-            <div class="page-header">
+            <div class="section-header">
                 Home
             </div>
             <ul class="socials">
