Add projects button link to home page

--- a/index.html
+++ b/index.html
@@ -33,9 +33,12 @@
 
     <div class="content">
         <div class="site-cards">
-            <div class="page-header">
-                <a href="./src/projects.html">Projects</a>
-            </div>
+            <!-- TODO Remove styles here and style this appropriately-->
+            <a href="./src/projects.html" 
+                style="border: 10px solid rgb(67, 129, 121); display: flex; border-radius: 5px; margin: 10px; padding: 10px; height: 100px; width: 100px; background-color: rgb(67, 129, 121);">
+                <img class="invert-colors" src="./img/projects.png" alt="Transparent/white Github logo"
+                    style="filter: invert(100);">
+            </a>
         </div>
     </div>
 
