--- a/src/projects.html
+++ b/src/projects.html
@@ -96,6 +96,7 @@
                                 to use (or even see) the widgets.
                             </div>
                             <ul class="card-technologies">
+                                <li>Jupyter</li>
                                 <li>Python</li>
                                 <li>Numpy</li>
                                 <li>Pandas</li>
@@ -174,6 +175,7 @@
                             <li>Bash</li>
                             <li>Python</li>
                             <li>GDB</li>
+                            <li>Linux</li>
                         </ul>
                     </div>
                 </li>
